# ConsumerSim

./: .env.example  .gitignore  README.md  WEBSITE_README.md  app.js  index.html  pyproject.toml  styles.css
.github/workflows/: refresh-site.yml  update-site.yml
configs/: eu.yaml  jp.yaml  us.yaml
consumer_pipeline/: README.md  __init__.py  bayesian.py  cli.py  config.py  debias.py  information.py  models.py  orchestrator.py  output.py  population.py  prediction.py  regions.py
consumersim_mcp_proxy/: __init__.py  client.py  server.py  settings.py  web.py
data/: consumersim_site_data.csv  forecast_driver_events.csv
examples/eu/: history.csv  indicators.csv  news.jsonl
examples/jp/: history.csv  indicators.csv  news.jsonl
examples/us/: history.csv  indicators.csv  news.jsonl
scripts/: generate_site_data.py  refresh_site_data.py
site/: .nojekyll  app.js  index.html  site-config.example.js
site/data/: consumersim_site_data.csv
tests/: test_pipeline.py  test_refresh_site_data.py  test_settings.py
