[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "consumersim-pipeline"
version = "1.0.0"
description = "Clean JP/EU/US ConsumerSim monthly pipeline"
requires-python = ">=3.10"
dependencies = ["PyYAML>=6.0,<7.0"]

[project.scripts]
consumersim-pipeline = "consumer_pipeline.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["consumer_pipeline*"]
